# Performance_Lab

./:  author.txt  pyproject.toml
task1/: task1.py
task2/: task2.py
task3/: task3.py
task4/: task4.py
