[tool.poetry]
name = "performance-lab"
version = "0.1.0"
description = ""
authors = ["Grishanov Andrey <gau@1jz.ru>"]
readme = "README.md"
packages = [{include = "performance_lab"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
